// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrdersListItem component should renders correctly 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        margin={null}
        numberOfLines={null}
        text="lbl_orders_orderDate"
        textDecoration={null}
      />
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        mobileFontFamily="secondary"
        numberOfLines={null}
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        margin={null}
        numberOfLines={null}
        text="lbl_orders_orderNumber"
        textDecoration={null}
      />
      <Styled(View)>
        <Styled(Anchor)
          accessibilityLabel=""
          anchorVariation="primary"
          colorName={null}
          customStyle={Object {}}
          fontSizeVariation="large"
          locator=""
          margins={null}
          noLink={true}
          onPress={[Function]}
          text=""
          underline={true}
          visible={false}
        />
      </Styled(View)>
    </Styled(View)>
    <Styled(View) />
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        margin={null}
        numberOfLines={null}
        text="lbl_orders_orderType"
        textDecoration={null}
      />
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        mobileFontFamily="secondary"
        numberOfLines={null}
        text="lbl_orders_pickupStore"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        margin={null}
        numberOfLines={null}
        text="lbl_orders_orderStatus"
        textDecoration={null}
      />
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        mobileFontFamily="secondary"
        numberOfLines={null}
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        margin={null}
        numberOfLines={null}
        text="lbl_orders_orderTotal"
        textAlign="left"
        textDecoration={null}
      />
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs14"
        margin={null}
        mobileFontFamily="secondary"
        numberOfLines={null}
        textAlign="left"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View) />
  </Styled(View)>
</Fragment>
`;

exports[`OrdersListItem component should renders correctly 2`] = `
<Fragment>
  <Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        margin={null}
        numberOfLines={null}
        text="lbl_orders_orderDate"
        textDecoration={null}
      />
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        mobileFontFamily="secondary"
        numberOfLines={null}
        text="Oct 4, 2019"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        margin={null}
        numberOfLines={null}
        text="lbl_orders_orderNumber"
        textDecoration={null}
      />
      <Styled(View)>
        <Styled(Anchor)
          accessibilityLabel=""
          anchorVariation="primary"
          colorName={null}
          customStyle={Object {}}
          fontSizeVariation="large"
          locator=""
          margins={null}
          noLink={true}
          onPress={[Function]}
          text="7000037172"
          underline={true}
          visible={false}
        />
      </Styled(View)>
    </Styled(View)>
    <Styled(View) />
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        margin={null}
        numberOfLines={null}
        text="lbl_orders_orderType"
        textDecoration={null}
      />
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        mobileFontFamily="secondary"
        numberOfLines={null}
        text="lbl_orders_online"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        margin={null}
        numberOfLines={null}
        text="lbl_orders_orderStatus"
        textDecoration={null}
      />
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        mobileFontFamily="secondary"
        numberOfLines={null}
        text="lbl_orders_statusNa"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="black"
        margin={null}
        numberOfLines={null}
        text="lbl_orders_orderTotal"
        textAlign="left"
        textDecoration={null}
      />
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs14"
        margin={null}
        mobileFontFamily="secondary"
        numberOfLines={null}
        text="$24.95"
        textAlign="left"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View) />
  </Styled(View)>
</Fragment>
`;
